# solid-state-battery-research

./: .gitignore  README.md
data/: candidate_screening_initial.csv  final_ranked_candidates.csv  literature_matrix.csv  novelty_checks.csv  stability_interface_analysis.csv  top15_candidate_summary.csv
manifests/: mixed_cation_examples.csv  tier1a_mlip_input_template.csv  tier1a_structure_manifest.csv
mlip_md_pipeline/: README.md  environment.yml  pyproject.toml  requirements.txt  run_pipeline.py
mlip_md_pipeline/mlip_md/: __init__.py  arrhenius.py  calculators.py  dummy.py  ingestion.py  md_runner.py  msd.py  orchestrator.py  outputs.py
mlip_md_pipeline/scripts/: fetch_mp_structures.py  generate_mixed_cation_supercell.py  plot_convergence.py  relax_structures.py
mlip_md_pipeline/tests/: test_pipeline.py
reports/: artifact_manifest.md  candidate_generation_notes.md  literature_synthesis.md  novelty_notes.md  solid-state-electrolyte-discovery-brief.pplx.md  stability_interface_notes.md
