[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlip_md"
version = "0.1.0"
description = "MLIP-MD screening pipeline for solid electrolyte candidates"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "ase>=3.23",
    "h5py>=3.10",
    "click>=8.1",
    "rich>=13.7",
    "joblib>=1.3",
    "pymatgen>=2024.3.1",
    "spglib>=2.4",
]

[project.scripts]
mlip-md = "run_pipeline:main"

[project.optional-dependencies]
mace = ["mace-torch>=0.3.6"]
chgnet = ["chgnet>=0.3.8"]
sevennet = ["sevenn>=0.9.0"]
test = ["pytest>=8.0", "pytest-cov"]
all = ["mace-torch>=0.3.6", "chgnet>=0.3.8", "pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
